<resources>
    <string name="app_name">Анекдоты, Афоризмы и цитаты 200к</string>
    <string name="action_settings">Настройки</string>
    <string name="initError">Возникла ошибка инициализации приложения!</string>
    <string name="errorTitle">Возникла ошибка</string>
    <string name="errorFreeSpace">Недостаточно свободного пространства для запуска приложения. Минимально необходимо 100Мб, а желательно больше...</string>
    <string name="initDB">Подготовка базы данных</string>

    <string name="section_format">Страница %1$d</string>
    <string name="skip">Пропустить</string>
    <string name="finish">Конец</string>

    <string name="MainMenu">Категории</string>
    <string name="Favorites">Избранное</string>
    <string name="Search">Поиск</string>
    <string name="Settings">Настройки</string>
    <string name="switchingAnekdots">Переключение анекдотов</string>
    <string name="opEnableSwap">Переключение жестом перелистывания</string>
    <string name="opEnableSide">Переключение касанием краев экрана</string>
    <string name="otherOptions">Другое</string>
    <string name="opEnableCensor">Проверять цензурой</string>
    <string name="title_activity_single_read">SingleReadActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="contentLoading">public class simpleOnScaleGestureListener extends         SimpleOnScaleGestureListener {      @Override     public boolean onScale(ScaleGestureDetector detector) {         // TODO Auto-generated method stub         float size = scaleGesture.getTextSize();         Log.d(\"TextSizeStart\", String.valueOf(size));          float factor = detector.getScaleFactor();         Log.d(\"Factor\", String.valueOf(factor));           float product = size*factor;         Log.d(\"TextSize\", String.valueOf(product));         scaleGesture.setTextSize(TypedValue.COMPLEX_UNIT_PX, product);          size = scaleGesture.getTextSize();         Log.d(\"TextSizeEnd\", String.valueOf(size));         return true;     } }</string>
    <string name="add_to_favorite">Add to favorite</string>

    <string name="title_activity_custom_share">Custom share</string>
    <string name="iv_content_desc">App icon</string>
    <string name="themesOptions">Настройки темы</string>
    <string name="goSearch">Искать</string>
    <string name="whatToSearch">Что искать?</string>
    <string name="SearchAn">Поиск анекдота</string>
    <string name="stop">Остановить</string>
    <string name="optThemeConfig">Настройки отображения</string>
    <string name="optionsEnableSBar">Полоса прокрутки</string>
    <string name="opFingerSize">Размер текста жестом</string>


    <string-array name="portrait_menu_sizes">
        <item id="2">2</item>
        <item id="3">3</item>
        <item id="4">4</item>
    </string-array>
    <string-array name="album_menu_sizes">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>
