<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.seostudio.vistar.testproject.fragments.OptionsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="1dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            card_view:cardBackgroundColor="@color/white_trans80"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"  >

                <TextView
                    android:text="@string/switchingAnekdots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/readingOptTextView" />

                <CheckBox
                    android:text="@string/opEnableSwap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/optionsEnableSwap" />
                <CheckBox
                    android:text="@string/opEnableSide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/optionsEnableScreenSides" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="1dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            card_view:cardBackgroundColor="@color/white_trans80"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"  >

                <TextView
                    android:text="@string/otherOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/otherOptTextView" />
                <CheckBox
                    android:text="@string/opEnableCensor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/optionsEnableCensor" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="1dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        card_view:cardBackgroundColor="@color/white_trans80"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"  >

            <TextView
                android:text="@string/themesOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/themesOptions" />
            <!-- ТУТ БУДУТ ТЕМЫ -->

        </LinearLayout>

    </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>